fix mistake in working on iphones

--- a/index.css
+++ b/index.css
@@ -56,17 +56,14 @@ body {
 
 .flip-card-front,
 .flip-card-back {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.flip-card-front,
-.flip-card-back {
   position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fefefe;
 }
 
 .flip-card-back {
@@ -115,7 +112,5 @@ body {
   .flip-card {
     display: flex;
     justify-content: space-evenly;
-    background-color: #fefefe;
   }
-
 }
